--- a/package.json
+++ b/package.json
@@ -19,9 +19,10 @@
     "bootstrap": "^5.3.5",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.1",
-    "react": "^19.0.0",
+    "react": "^18.2.0",
     "react-bootstrap": "^2.10.9",
-    "react-dom": "^19.0.0",
+    "react-dom": "^18.2.0",
+    "react-quill": "^2.0.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.5.0",
     "recharts": "^2.15.3",
